--- a/Appsmith/docker-compose.yml
+++ b/Appsmith/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./stacks:/appsmith-stacks
+      - ./data:/appsmith-stacks
     restart: unless-stopped
     # Uncomment the lines below to enable auto-update
     labels:
