Tweak data bind name for nocodb

--- a/NocoDb/docker-compose.yml
+++ b/NocoDb/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - "8080:8080"
     restart: unless-stopped
     volumes:
-      - ./nocodb:/usr/app/data
+      - ./data:/usr/app/data
