--- a/Nginx/docker-compose.yml
+++ b/Nginx/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   app:
+    # admin@example.com / changeme
     image: 'jc21/nginx-proxy-manager:latest'
     restart: unless-stopped
     ports:
