--- a/Nginx/docker-compose.yml
+++ b/Nginx/docker-compose.yml
@@ -11,3 +11,5 @@ services:
     volumes:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
