--- a/Portainer/docker-compose.yml
+++ b/Portainer/docker-compose.yml
@@ -6,8 +6,6 @@ services:
       - "9443:9443"
       - "9000:9000"
     volumes:
-      - data:/data
+      - ./data:/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
-volumes:
-  data:
