--- a/Redis/docker-compose.yml
+++ b/Redis/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - '6379:6379'
     command: redis-server --save 20 1 --loglevel warning
     volumes:
-      - cache:/data
+      - ./data:/data
 
   redis-commander:
     container_name: redis-commander
@@ -17,7 +17,3 @@ services:
       - REDIS_HOSTS=local:redis:6379
     ports:
       - "8888:8081"
-
-volumes:
-  cache:
-    driver: local
