--- a/Chromecast/docker-compose.yml
+++ b/Chromecast/docker-compose.yml
@@ -9,3 +9,10 @@ services:
     restart: unless-stopped
     command: catt --device ${CHROMECAST_IP} cast_site '${CAST_URL}'
     #command: catt scan
+    
+    # Catt seems to time out periodically, and benefits from just restarting the container
+    restarter:
+      image: docker
+      volumes: [ "/var/run/docker.sock:/var/run/docker.sock" ]
+      command: [ "/bin/sh", "-c", "while true; do sleep 7200; docker restart chromecast; done" ]
+      restart: unless-stopped
