--- a/Chromecast/docker-compose.yml
+++ b/Chromecast/docker-compose.yml
@@ -14,5 +14,5 @@ services:
   restarter:
     image: docker
     volumes: [ "/var/run/docker.sock:/var/run/docker.sock" ]
-    command: [ "/bin/sh", "-c", "while true; do sleep 7200; docker restart chromecast; done" ]
+    command: [ "/bin/sh", "-c", "while true; do sleep 2h; docker restart chromecast-chromecast-1; done" ]
     restart: unless-stopped
