--- a/Grist/docker-compose.yml
+++ b/Grist/docker-compose.yml
@@ -4,9 +4,10 @@ services:
   grist:
     image: gristlabs/grist:latest
     ports:
-      - "8484:8484"
+      - "8484:443"
     environment:
       - APP_HOME_URL="https://grist.mattgwagner.com"
+      - PORT=443
     volumes:
       - ./data:/persist
     labels:
