--- a/SQL-Server/docker-compose.yml
+++ b/SQL-Server/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
     db:
         image: "mcr.microsoft.com/mssql/server"
+        user: root
         environment:
             SA_PASSWORD: ${SQL_SA_PASSWORD}
             ACCEPT_EULA: "Y"
