--- a/SQL-Server/docker-compose.yml
+++ b/SQL-Server/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     db:
         image: "mcr.microsoft.com/mssql/server"
         user: root
+        restart: always
         environment:
             SA_PASSWORD: ${SQL_SA_PASSWORD}
             ACCEPT_EULA: "Y"
