--- a/Android/docker-compose.yml
+++ b/Android/docker-compose.yml
@@ -4,9 +4,11 @@ services:
     image: budtmo/docker-android:emulator_13.0
     ports:
       - "6080:6080"
+      - 9000
     volumes:
       - ./data:/data
-      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - EMULATOR_DEVICE="Samsung Galaxy S10"
       - WEB_VNC=true
+      - WEB_LOG=true
+      - WEB_LOG_PORT=9000
