--- a/SteinHQ/docker-compose.yml
+++ b/SteinHQ/docker-compose.yml
@@ -5,9 +5,9 @@ services:
       - "3000:3000"
     environment:
       - STEIN_MONGO_URL=mongodb://mongo:27017/stein
-      - STEIN_CLIENT_ID=
-      - STEIN_CLIENT_SECRET=
-      - STEIN_CALLBACK_URL=
+      - STEIN_CLIENT_ID=${STEIN_CLIENT_ID}
+      - STEIN_CLIENT_SECRET=${STEIN_CLIENT_SECRET}
+      - STEIN_CALLBACK_URL=${STEIN_CALLBACK_URL}
   mongo:
     image: mongo
     restart: always
