--- a/Minecraft/docker-compose.yml
+++ b/Minecraft/docker-compose.yml
@@ -23,3 +23,15 @@ services:
       EULA: "TRUE"
       MOTD: Welcome to Wagnerland 2, powered by Red Leg Dev
     restart: unless-stopped
+  minecraft-3:
+    image: itzg/minecraft-server
+    stdin_open: true
+    tty: true
+    ports:
+      - "25567:25565"
+    volumes:
+      - ./data-3:/data
+    environment:
+      EULA: "TRUE"
+      MOTD: Welcome to Wagnerland 3, powered by Red Leg Dev
+    restart: unless-stopped
