--- a/Minecraft/docker-compose.yml
+++ b/Minecraft/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     tty: true
     ports:
       - "25569:25565"
-``    volumes:
+    volumes:
       - ./data-5:/data
     environment:
       EULA: "TRUE"
