--- a/Cloudflared/docker-compose.yml
+++ b/Cloudflared/docker-compose.yml
@@ -1,17 +1,9 @@
-version: "3.8"
 services:
   cloudflared:
     image: cloudflare/cloudflared:latest
     container_name: cloudflare-tunnel
     restart: unless-stopped
     command: tunnel run
-    networks:
-      - proxy
+    network_mode: host
     environment:
       - TUNNEL_TOKEN=${TUNNEL_TOKEN}
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-
-networks:
-  proxy:
-    driver: bridge
